# subgraph-isomorphisms

./: .gitignore  ANALIZA_WYKRESOW.md  CMakeLists.txt  CO_ZOSTALO_POPRAWIONE.md  GENEROWANIE_TESTOW_LOSOWYCH.md  INSTALACJA.md  INSTRUKCJA_NAJNOWSZA.md  KOMPILACJA_RELEASE.md  PODSUMOWANIE_TESTOW.md  POPRAWKI_WYKRESOW.md  PROBLEM_Z_TESTAMI.md  QUICK_FIX.md  QUICK_START_WYKRESY.md  README.md  TESTING_README.md  TESTY_INSTRUKCJA.md  batch_tester.py  changes.txt  check_approx_scale.py  compare_algorithms.py  doc  emaile  generate_chaos_tests.py  generate_manual_tests.py  generate_nightmare_tests.py  generate_plots.bat  generate_plots.py  generate_plots_improved.py  generate_report.py  generate_tricky_tests.py  generate_valid_tests.py  giga_sprawdzarka.py  out.txt  out_giga.txt  out_giga_pre.txt  performance_tests.py  run_all_tests.py  run_tests.bat  sprawdzarka.py  sprawdzarka_FINAL.py  (+3 more)
manual_testy_opis/: manual_01_single_edge.txt  manual_01_single_edge_OPIS.txt  manual_02_triangle.txt  manual_02_triangle_OPIS.txt  manual_03_path_in_path_OPIS.txt  manual_04_selfloop.txt  manual_04_selfloop_OPIS.txt  manual_05_multiplicity_OPIS.txt  manual_06_two_copies.txt  manual_06_two_copies_OPIS.txt  manual_07_impossible.txt  manual_07_impossible_OPIS.txt  manual_08_cycle_plus.txt  manual_10_boundary.txt
performance_results/: comparison_report.txt  report.md  results.json
src/: main.cpp
tests/: descriptions.txt  test_02.txt  test_03.txt  test_04.txt  test_05.txt  test_07.txt
tests_auto/: debug_impossible.txt  debug_test.txt  debug_test_overlap.txt  fuzz_00.txt  fuzz_01.txt  (+19 more)
(+197 files in other folders)
